fix: apply filename too long

--- a/packages/ai-native/src/browser/mcp/tools/components/index.module.less
+++ b/packages/ai-native/src/browser/mcp/tools/components/index.module.less
@@ -7,6 +7,7 @@
   font-size: 10px;
   margin-bottom: -4px;
   border-radius: 8px 8px 0 0;
+  white-space: nowrap;
   > span {
     margin-right: 4px;
   }
@@ -18,6 +19,10 @@
     align-items: center;
     justify-content: center;
   }
+}
+.edit-file-tool-file-name {
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .edit-file-tool {
   border: 1px solid var(--vscode-commandCenter-inactiveBorder);
